--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 			<h1>HELLO THERE!<h1>
 			<p>There once was a jedi who was seduced by the Darkside of the force. He is Young Anakin Skywalker.
 		</div>
+	<footer>2022</footer>
 	</body>
 </html>
 
